k8s/service-a.yaml

apiVersion: v1
kind: Service
metadata:
  name: service-a-service
spec:
  selector:
    app: service-a # same as deployment selector
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
