k8s/service-b.yaml

apiVersion: v1
kind: Service
metadata:
  name: service-b-service
spec:
  selector:
    app: service-b # same as deployment selector
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
