k8s/service-c.yaml

apiVersion: v1
kind: Service
metadata:
  name: service-c-service
spec:
  selector:
    app: service-c # same as deployment selector
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
