k8s/service-d.yaml

apiVersion: v1
kind: Service
metadata:
  name: service-d-service
spec:
  selector:
    app: service-d # same as deployment selector
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
